--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 <h1>Welcome to Martins testpage</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<img alt="pasta" src="pasta.png">
 </body>
 </html>
