--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 	<link rel="stylesheet" href="stylesheet.CSS" />
 </head>
 <body>
+<div id= "main">
 <h1>Welcome to Martins testpage</h1>
 <p>I'm hosted with GitHub Pages.</p>
+</div>
 <article> 
 		<h3>Pasta</h3>
 		<img alt="pasta" src="pasta.png">
-			<p>Pasta is type of noodle typically made from an unleavened dough of durum wheat flour mixed with water or eggs, and formed into sheets or various shapes, then cooked by boiling or baking. Rice flour, or legumes such as beans or lentils, are sometimes used in place of wheat flour to yield a different taste and texture, or as a gluten-free alternative. Pasta is a staple food of Italian cuisine.</p>
-			<p>Pastas are divided into two broad categories: dried (pasta secca) and fresh (pasta fresca). Most dried pasta is produced commercially via an extrusion process, although it can be produced at home. Fresh pasta is traditionally produced by hand, sometimes with the aid of simple machines. Fresh pastas available in grocery stores are produced commercially by large-scale machines.</p>
-			<p>Both dried and fresh pastas come in a number of shapes and varieties, with 310 specific forms known by over 1300 documented names. In Italy, the names of specific pasta shapes or types often vary by locale. For example, the pasta form cavatelli is known by 28 different names depending upon the town and region. Common forms of pasta include long and short shapes, tubes, flat shapes or sheets, miniature shapes for soup, those meant to be filled or stuffed, and specialty or decorative shapes.</p>
-		</article>
+</article>
 </body>
 </html>
