--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<!-- Titel -->
-	<title>martjay GitHub</title>
-	<link rel="stylesheet" href="stylesheet.CSS" />
-</head>
+<link type="text/css" rel="stylesheet" href="/stylesheet.css"/>
 <body>
 <div id= "main">
 <h1>Welcome to Martins testpage</h1>
