--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link type="text/css" rel="stylesheet" href="/stylesheet.css"/>
+<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <body>
 <div id= "main">
 <h1>Welcome to Martins testpage</h1>
