just learning html again

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+<head>
+	<meta charset="utf-8">
+	<!-- Title -->
+	<title>Martjays GitHub Page</title>
+	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+</head>
+
 <body>
 <div id= "main">
 <h1>Welcome to Martins testpage</h1>
