--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
     <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <button type="Create" class="createbtn">Create</button>
+      <button type="button" class="updatebtn">Update</button>
+      <button type="button" class="createbtn">Create</button>
     </div>
   </div>
 </form>
