--- a/index - kopia.html
+++ b/index - kopia.html
@@ -2,12 +2,10 @@
 <html>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 
-<!-- The Modal (contains the Sign Up form) -->
-<div id="id01" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">times;</span>
-  <form class="modal-content" action="/action_page.php">
-    <div class="container">
-      <h1>Add Client</h1>
+
+<form action="action_page.php" style="border:1px solid #ccc">
+  <div class="container">
+    <h1>Add Client</h1>
     <p>Please fill in this form to create an Client.</p>
     <hr>
 
@@ -51,20 +49,8 @@
 
     <div class="clearfix">
       <button type="button" class="updatebtn">Update</button>
-      <button type="button" class="createbtn">Create</button
-      </div>
+      <button type="button" class="createbtn">Create</button>
     </div>
-  </form>
-</div>
-    
-<script>
-// Get the modal
-var modal = document.getElementById('id01');
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
+  </div>
+</form>
+</html>
