--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 
+  <!-- Button to open the modal -->
+<button onclick="document.getElementById('id01').style.display='block'">Add Client</button>
+
 <!-- The Modal (contains the Sign Up form) -->
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">times;</span>
