--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 
+<h2>CoronaMatch Admin page</h2>
+
   <!-- Button to open the modal -->
 <button onclick="document.getElementById('id01').style.display='block'">Add Client</button>
 
