--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <!-- Button to open the modal -->
 <button onclick="document.getElementById('id01').style.display='block'">Add Client</button>
-<button onclick2="document.getElementById('id02').style.display='block'">Add Provider</button>
+<button onclick="document.getElementById('id02').style.display='block'">Add Provider</button>
 
 <!-- The Modal (contains the Client form) -->
 <div id="id01" class="modal">
