--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- The Modal (contains the Provider form) -->
 <div id="id02" class="modal">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">X</span>
-  <form class="modal-content" action="/action_page.php">
+  <form class="modal-content" action="/action_page2.php">
     <div class="container">
       <h1>Add Provider</h1>
     <p>Please fill in this form to create an Provider.</p>
