--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <script>
 // Get the modal
 var modal = document.getElementById('id01');
-var modal = document.getElementById('id02');
+var modal2 = document.getElementById('id02');
 
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
