--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
     
 <script>
   function myFunction(a) {
-  document.getElementById(a);
+  return document.getElementById(a);
   }
   
 // Get the modal
-var modal = myFunction();
+var modal = myFunction(a);
 
 
 // When the user clicks anywhere outside of the modal, close it
