--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <h2>CoronaMatch Admin page</h2>
   
   <!-- Button to open the modal -->
-<button onclick="myFunction(id01)'">Add Client</button>
-<button onclick="myFunction(id02)'">Add Provider</button>
+<button onclick="myFunction(id01)">Add Client</button>
+<button onclick="myFunction(id02)">Add Provider</button>
 
 <!-- The Modal (contains the Client form) -->
 <div id="id01" class="modal">
