--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function myFunction2() {
 
   
 // Get the modal
-var modal = myFunction(a);
+var modal = myFunction2(a);
 
 
 // When the user clicks anywhere outside of the modal, close it
