--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
     
 <script>
   function myFunction1() {
-  return document.getElementById(id01);
+  return "document.getElementById('id01').style.display='block'"
   }
 function myFunction2() {
-  return document.getElementById(id02);
+  return "document.getElementById('id02').style.display='block'"
   }
 
   
 // Get the modal
-var modal = myFunction2(a);
+var modal = myFunction2();
 
 
 // When the user clicks anywhere outside of the modal, close it
