--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
     
 <script>
   function myFunction1() {
-  return "document.getElementById('id01').style.display='block'"
+  document.getElementById('id01').style.display='block';
   }
 function myFunction2() {
-  return "document.getElementById('id02').style.display='block'"
+  document.getElementById('id02').style.display='block';
   }
 
   
