--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <button onclick="myFunction2()">Add Provider</button>
 
 <!-- The Modal (contains the Client form) -->
-<div id="id01" class="modal">
+<div id="id01" class="client">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">X</span>
-  <form class="modal-content" action="/action_page.php">
+  <form class="client-content" action="/action_page.php">
     <div class="container">
       <h1>Add Client</h1>
     <p>Please fill in this form to create an Client.</p>
@@ -64,9 +64,9 @@
 </div>
     
     <!-- The Modal (contains the Provider form) -->
-<div id="id02" class="modal">
+<div id="id02" class="provider">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">X</span>
-  <form class="modal-content" action="/action_page2.php">
+  <form class="provider-content" action="/action_page2.php">
     <div class="container">
       <h1>Add Provider</h1>
     <p>Please fill in this form to create an Provider.</p>
@@ -126,13 +126,14 @@ function myFunction2() {
 
   
 // Get the modal
-var modal = myFunction2();
+var client = myFunction1();
+var provider = myFunction2();
 
 
 // When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
+//window.onclick = function(event) {
+//  if (event.target == modal) {
+ //   modal.style.display = "none";
+ // }
 }
 </script>
