--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@ function myFunction2() {
 
   
 // Get the modals
-var client = myFunction1();
+var modal = myFunction1();
 
 
-// When the user clicks anywhere outside of the modal, close it
-//window.onclick = function(event) {
-//  if (event.target == modal) {
- //   modal.style.display = "none";
- // }
+ When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
 }
 </script>
