tried to get it working again

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <button onclick="myFunction2()">Add Provider</button>
 
 <!-- The Client (contains the Client form) -->
-<div id="id01" class="client">
+<div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Client">X</span>
   <form class="client-content" action="/action_page.php">
     <div class="container">
@@ -120,6 +120,7 @@
   function myFunction1() {
   document.getElementById('id01').style.display='block';
   }
+
 function myFunction2() {
   document.getElementById('id02').style.display='block';
   }
