--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- The Client (contains the Client form) -->
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Client">X</span>
-  <form class="client-content" action="/action_page.php">
+  <form class="modal-content" action="/action_page.php">
     <div class="container">
       <h1>Add Client</h1>
     <p>Please fill in this form to create an Client.</p>
