--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 </div>
     
     <!-- The Provider (contains the Provider form) -->
-<div id="id02" class="provider">
+<div id="id02" class="modal">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">X</span>
-  <form class="provider-content" action="/action_page2.php">
+  <form class="modal-content" action="/action_page2.php">
     <div class="container">
       <h1>Add Provider</h1>
     <p>Please fill in this form to create an Provider.</p>
     <hr>
 
-    <label for="clientID"><b>Provider ID</b></label>
+    <label for="providerID"><b>Provider ID</b></label>
     <input type="text" placeholder="Enter Provider ID" name="providerID" required>
 
     <label for="name"><b>Name</b></label>
@@ -119,16 +119,16 @@
 <script>
   function myFunction1() {
   document.getElementById('id01').style.display='block';
+	var modal = document.getElementById('id01');
   }
 
 function myFunction2() {
   document.getElementById('id02').style.display='block';
+
+var modal = document.getElementById('id02');
   }
 
   
-// Get the modals
-var modal = myFunction1();
-
 
  When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
