--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ hr {
   }
 }
 </style>
-
+<body>
   <h2>CoronaMatch Admin page</h2>
   
   <!-- Button to open the modal -->
@@ -245,3 +245,5 @@ var modal = myFunction();
  // }
 }
 </script>
+ </body>
+</html>
