--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ hr {
   <h2>CoronaMatch Admin page</h2>
   
   <!-- Button to open the modal -->
-<button onclick="myFunction1()">Add Client</button>
-<button onclick="myFunction2()">Add Provider</button>
+<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Add Client</button>
+<button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Add Provider</button>
 
 <!-- The Client (contains the Client form) -->
 <div id="id01" class="client">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Client">X</span>
-  <form class="client-content" action="/action_page.php">
+  <form class="modal-content" action="/action_page.php">
     <div class="container">
       <h1>Add Client</h1>
     <p>Please fill in this form to create an Client.</p>
@@ -174,9 +174,9 @@ hr {
 </div>
     
     <!-- The Provider (contains the Provider form) -->
-<div id="id02" class="provider">
+<div id="id02" class="modal">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">X</span>
-  <form class="provider-content" action="/action_page2.php">
+  <form class="modal-content" action="/action_page2.php">
     <div class="container">
       <h1>Add Provider</h1>
     <p>Please fill in this form to create an Provider.</p>
@@ -227,22 +227,14 @@ hr {
 </div>
     
 <script>
-  function myFunction() {
-  document.getElementById('id01').style.display='block';
-  }
-
-
-  
-// Get the modals
-var modal = myFunction();
-
-
+// Get the modal
+var modal = document.getElementById('id01');
 
 // When the user clicks anywhere outside of the modal, close it
-//window.onclick = function(event) {
-//  if (event.target == modal) {
- //   modal.style.display = "none";
- // }
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
 }
 </script>
  </body>
