--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ hr {
     
 <script>
 // Get the modal
-
+modal.style.display = "none";
 
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
