--- a/index.html
+++ b/index.html
@@ -67,19 +67,6 @@ button:hover {
   padding-top: 50px;
 }
   
-  /* The Modal (background) */
-.modal2 {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: #474e5d;
-  padding-top: 50px;
-}
 
 /* Modal Content/Box */
 .modal-content {
@@ -89,13 +76,6 @@ button:hover {
   width: 80%; /* Could be more or less, depending on screen size */
 }
   
-  /* Modal Content/Box */
-.modal2-content {
-  background-color: #fefefe;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
 
 /* Style the horizontal ruler */
 hr {
@@ -141,7 +121,7 @@ hr {
 <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Add Provider</button>
 
 <!-- The Client (contains the Client form) -->
-<div id="id01" class="client">
+<div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Client">X</span>
   <form class="modal-content" action="/action_page.php">
     <div class="container">
@@ -196,15 +176,15 @@ hr {
 </div>
     
     <!-- The Provider (contains the Provider form) -->
-<div id="id02" class="modal2">
+<div id="id02" class="modal">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">X</span>
-  <form class="modal2-content" action="/action_page2.php">
+  <form class="modal-content" action="/action_page2.php">
     <div class="container">
       <h1>Add Provider</h1>
     <p>Please fill in this form to create an Provider.</p>
     <hr>
 
-    <label for="clientID"><b>Provider ID</b></label>
+    <label for="providerID"><b>Provider ID</b></label>
     <input type="text" placeholder="Enter Provider ID" name="providerID" required>
 
     <label for="name"><b>Name</b></label>
@@ -250,7 +230,7 @@ hr {
     
 <script>
 // Get the modal
-modal.style.display = "none";
+
 
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
