--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@ button:hover {
   background-color: #474e5d;
   padding-top: 50px;
 }
+
+/* The Modal2 (background) */
+.modal2 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #474e5d;
+  padding-top: 50px;
+}
+
   
 
 /* Modal Content/Box */
@@ -75,6 +90,15 @@ button:hover {
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
 }
+
+/* Modal2 Content/Box */
+.modal2-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
   
 
 /* Style the horizontal ruler */
@@ -176,9 +200,9 @@ hr {
 </div>
     
     <!-- The Provider (contains the Provider form) -->
-<div id="id02" class="modal">
+<div id="id02" class="modal2">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">X</span>
-  <form class="modal-content" action="/action_page2.php">
+  <form class="modal2-content" action="/action_page2.php">
     <div class="container">
       <h1>Add Provider</h1>
     <p>Please fill in this form to create an Provider.</p>
@@ -232,12 +256,7 @@ hr {
 // Get the modal
 
 
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
+
 </script>
  </body>
 </html>
