--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ hr {
     <!-- The Provider (contains the Provider form) -->
 <div id="id02" class="modal2">
   <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">X</span>
-  <form class="modal2-content" action="/action_page2.php">
+  <form class="modal2-content" action="/action_page.php">
     <div class="container">
       <h1>Add Provider</h1>
     <p>Please fill in this form to create an Provider.</p>
@@ -246,7 +246,7 @@ hr {
 
     <div class="clearfix">
       <button type="button" class="updatebtn">Update</button>
-      <button type="button" class="createbtn">Create</button
+      <button type="button" class="createbtn">Create</button>
       </div>
     </div>
   </form>
