--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<!-- The Client (contains the Client form) -->
 	<div id="id01" class="modal">
-		<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Client">X</span>
+		<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Client">Go Back</span>
 		<form class="modal-content" action="/action_page.php">
 			<div class="container">
 				<h1>Add Client</h1>
@@ -68,7 +68,7 @@
 
 	<!-- The Provider (contains the Provider form) -->
 	<div id="id02" class="modal">
-		<span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">X</span>
+		<span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">Go Back</span>
 		<form class="modal-content" action="/action_page.php">
 			<div class="container">
 				<h1>Add Provider</h1>
