--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 <body>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css" />
+	
 	<h2>CoronaMatch Admin page</h2>
 
 	<!-- Button to open the modal -->
-	<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Add Client</button>
-	<button onclick="myMethod()" style="width:auto;">Add Provider</button>
+	<button onclick="getClientModal()" style="width:auto;">Add Client</button>
+	<button onclick="getProviderModal()" style="width:auto;">Add Provider</button>
 
 	<!-- The Client (contains the Client form) -->
-	<div id="id01" class="modal">
+	<div id="client" class="modal">
 		<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Client">Go Back</span>
 		<form class="modal-content" action="/action_page.php">
 			<div class="container">
@@ -67,7 +68,7 @@
 	</div>
 
 	<!-- The Provider (contains the Provider form) -->
-	<div id="id02" class="modal">
+	<div id="provider" class="modal">
 		<span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">Go Back</span>
 		<form class="modal-content" action="/action_page.php">
 			<div class="container">
@@ -120,9 +121,12 @@
 	</div>
 
 	<script>
-		// my method
-		function myMethod() {
-			document.getElementById('id02').style.display = 'block';
+		// my methods
+		function getProviderModal() {
+			document.getElementById('provider').style.display = 'block';
+		}
+		function getClientModal() {
+			document.getElementById('client').style.display = 'block';
 		}
 
 
