--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- The Client (contains the Client form) -->
 	<div id="client" class="modal">
-		<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Client">Go Back</span>
+		<span onclick="document.getElementById('client').style.display='none'" class="close" title="Close Client">Go Back</span>
 		<form class="modal-content" action="/action_page.php">
 			<div class="container">
 				<h1>Add Client</h1>
@@ -69,7 +69,7 @@
 
 	<!-- The Provider (contains the Provider form) -->
 	<div id="provider" class="modal">
-		<span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Provider">Go Back</span>
+		<span onclick="document.getElementById('provider').style.display='none'" class="close" title="Close Provider">Go Back</span>
 		<form class="modal-content" action="/action_page.php">
 			<div class="container">
 				<h1>Add Provider</h1>
@@ -128,8 +128,6 @@
 		function getClientModal() {
 			document.getElementById('client').style.display = 'block';
 		}
-
-
 
 	</script>
 </body>
