--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				<input type="text" placeholder="Enter City" name="city" required>
 
 				<h2>Tasks:  </h2>
+				<p>Please check the task you need help with</p>
 
 				<label>
 					<input type="checkbox" name="cleaning" style="margin-bottom:15px"> Cleaning
@@ -92,6 +93,7 @@
 				<input type="text" placeholder="Enter City" name="city" required>
 
 				<h2>Tasks:  </h2>
+				<p>Please check the task you can help out with</p>
 
 				<label>
 					<input type="checkbox" name="cleaning" style="margin-bottom:15px"> Cleaning
