--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <body>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css" />
-
+	<div class="header">
+		<h1>CoronaMatch</h1>
+		<p>Admin page</p>
+	</div>
 	<!-- Buttons to open the modals -->
-	<div class="meny">
-		<h2>CoronaMatch Admin page</h2>
+	<div class="meny">		
 		<button onclick="getClientModal()" style="width:auto;">Add Client</button>
 		<button onclick="getProviderModal()" style="width:auto;">Add Provider</button>
 	</div>
