--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</div>
 	<!-- Buttons to open the modals -->
 	<div class="meny">		
-		<button onclick="getClientModal()" style="width:auto;">Add Client</button>
-		<button onclick="getProviderModal()" style="width:auto;">Add Provider</button>
+		<button onclick="getClientModal()">Add Client</button>
+		<button onclick="getProviderModal()">Add Provider</button>
 	</div>
 	<!-- The Client (contains the Client form) -->
 	<div id="client" class="modal">
