--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+</head>
 <body>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css" />
 	<div id="page container">
