--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Järnåkravägen 9B · Lund, 22225 · +46 730890118 ·
-                        <a href="mailto:name@email.com">martin.johansson93@gmail.com</a>
+                        <a href="martin.johansson93@gmail.com">Contact me</a>
                     </div>
                     <p class="lead mb-5">Licensed physiotherapist now studying Bachelor of Science in Information Systems, major Information Systems. I’m originally from Uppsala but moved to Lund for my higher education. </p>
                     <div class="social-icons">
