--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Resume - Martjay Github</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -159,8 +159,8 @@
                         <li class="list-inline-item"><i class="fab fa-dribbble"></i></li>
                         <li class="list-inline-item"><i class="fa fa-bicycle"></i></li>
                     </ul>
-                    <p>When I'm not studying or working part-time, I enjoy most of my time playing basketball, cycling or exercising in some other way. You might also find me tgravelling around Europe by train if i have a longer time free</p>
-                    <p class="mb-0">On rainy days, I follow a number of sci-fi and fantasy genre movies and television shows, Trying some new recipe in the kitchen</p>
+                    <p>When I'm not studying or working part-time, I enjoy most of my time playing basketball, cycling or exercising in some other way. You might also find me travelling around Europe by train in the summer or on breaks</p>
+                    <p class="mb-0">On rainy days, I follow a number of sci-fi and fantasy genre movies and television shows or I'm busy in the kitchen experimenting with some new recipes</p>
                 </div>
             </section>
             <hr class="m-0" />
